The file menu options now no longer absolute-positioned, no need to set margin dynamically now. Fixed the hovering issue where the select option will not appear due to hovering over margin, changing background color whenever file options menu is open. Finally, clicking anywhere other than file option menu or ellipsis will collapse the file-option menu.

--- a/Cloud Storage Platform/AngularApplication/CloudStoragePlatformUI/src/app/items/file-large/file-large.component.css
+++ b/Cloud Storage Platform/AngularApplication/CloudStoragePlatformUI/src/app/items/file-large/file-large.component.css
@@ -20,8 +20,13 @@
 }
 
 .file{
-    margin: 15px;
+    padding: 15px;
     position: relative;
+}
+
+.file:hover{
+  background-color: rgba(211, 211, 211, 0.593);
+  cursor: pointer;
 }
 
 .file-options{
@@ -57,11 +62,12 @@
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
-    top: 30px;
+    top: 40px;
     right: 0px;
     border: 2px solid lightgray;
     transition: height 0.4s ease-in-out;
     z-index: 6;
+    overflow: hidden;
 }
 
 .file-option{
@@ -70,7 +76,7 @@
     padding-bottom: 9px;
     width: 100%;
     text-align: center;
-    position: absolute;
+    position: relative;
     transition: opacity 0.2s ease-in;
 }
 
@@ -135,15 +141,15 @@
 .fa-heart{
     position: absolute;
     display: inline;
-    top: 2px;
-    left: 32px;
-    font-size: 20px;
+    top: 18px;
+    right: 20px;
+    font-size: 16px;
 }
 
 #selectFile{
     display: inline;
     position: absolute;
-    top: 5px;
+    top: 18px;
     visibility: hidden;
 }
 
